chore; add initial swagger-ui config

--- a/user-service/package.json
+++ b/user-service/package.json
@@ -16,7 +16,8 @@
   "dependencies": {
     "dotenv": "^16.4.5",
     "mongodb": "^6.8.0",
-    "mongoose": "^8.5.2"
+    "mongoose": "^8.5.2",
+    "swagger-ui-dist": "^5.17.14"
   },
   "devDependencies": {
     "jasmine": "^5.2.0",
