--- a/product-service/package.json
+++ b/product-service/package.json
@@ -14,6 +14,7 @@
   "author": "stanlymathai",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.7.3",
     "dotenv": "^16.4.5",
     "mongodb": "^6.8.0",
     "mongoose": "^8.5.2",
